# xenia

./: Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
examples/: uname.rs
src/: as_cstr.rs  errno.rs  fd.rs  guid.rs  lib.rs  nr.rs  stdio.rs  syscall.rs  syscalls.rs  types.rs
src/fd/: mod.rs  owned.rs  raw.rs
src/syscalls/: chdir.rs  chroot.rs  clock_gettime.rs  close.rs  execve.rs  exit_group.rs  fstat.rs  getcwd.rs  geteuid.rs  getpid.rs  ioctl.rs  mkdir.rs  mod.rs  mount.rs  open.rs  readlinkat.rs  stat.rs  umask.rs  uname.rs  utimensat.rs  write.rs
utils/: Cargo.toml
utils/src/: args.rs  ioctls.rs  lib.rs  passwd.rs  stdio.rs  termios.rs
