[workspace]
members = ["utils"]

[package]
name = "xenia"
version = "0.1.1"
edition = "2024"
description = "xenia"
license = "Apache-2.0 WITH LLVM-exception"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
bitflags = "2.11.0"
linux-raw-sys = { version = "0.12.1", default-features = false, features = [
    "errno",
    "general",
    "system",
    "no_std",
] }
