[package]
name = "xenia-utils"
version = "0.0.1"
edition = "2024"
description = "xenia"
license = "Apache-2.0 WITH LLVM-exception"

[features]
default = ["std"]
std = ["xenia/std"]

[dependencies]
linux-raw-sys = { version = "0.11.0", default-features = false, features = ["ioctl", "no_std"] }
xenia = { version = "0.0.3", path = "..", default-features = false }
