[package]
name = "xenia-utils"
version = "0.0.2"
edition = "2024"
description = "xenia"
license = "Apache-2.0 WITH LLVM-exception"
include = ["src/**/*.rs", "../README.md", "../LICENSE"]

[features]
default = ["std"]
std = ["xenia/std"]

[dependencies]
linux-raw-sys = { version = "0.11.0", default-features = false, features = [
    "ioctl",
    "no_std",
] }
xenia = { version = "0.1", path = "..", default-features = false }
